# ParallelLessons

./: CMakeLists.txt  README.md  generate_vscode_debug_targets.py
src/common/: utils.h
src/lessons/: l1_matrix_product.cpp  l2_even_odd.cpp  l2_table_sum.cpp
